# IPCienciaDeDatos

./: README.md
day1/: day1.Rmd  day1.nb.html
python/evaluation/: evaluation.ipynb  main.py  pyproject.toml
python/evaluation/data/: vote.arff
python/part1/: ejercicio1.py  ejercicio11.py  ejercicio12.py  ejercicio14.py  ejercicio15.py  ejercicio16.py  ejercicio19.py  ejercicio2.py  ejercicio5.py  ejercicio6.py  ejercicio8.py  pyproject.toml
python/part1-lists/: ejercicio1.py  ejercicio10.py  ejercicio11.py  ejercicio12.py  ejercicio13.py  ejercicio14.py  ejercicio2.py  ejercicio3.py  ejercicio4.py  ejercicio5.py  ejercicio6.py  ejercicio7.py  ejercicio8.py  ejercicio9.py  generar_lista.py  pyproject.toml
python/part1-strings/: ejercicio1.py  ejercicio10.py  ejercicio13.py  ejercicio17.py  ejercicio18.py  ejercicio19.py  ejercicio20.py  ejercicio21.py  ejercicio3.py  ejercicio4.py  ejercicio7.py  ejercicio9.py
r/evaluation/: evaluacion.R  fichero.txt  fichero1.txt  fichero2.txt  word_frequency.csv
r/part1/: part1-matrix.Rmd  part1-matrix.nb.html
r/part2/: ejercicioClase29Sep.R  part2-dataframes.Rmd  part2-dataframes.nb.html  part2-factors.Rmd  part2-factors.nb.html
r/part3/: part3.Rmd  part3.nb.html
r/part4/functions/: ejercicio1.R  ejercicio2.R  ejercicio3.R  ejercicio4.R  ejercicio5.R
r/part4/io/: ejercicio1.R  ejercicio2.R  ejercicio3.R  ejercicio4.R  ejercicio5.R
r/part4/programming_structure/: ejercicio1.R  ejercicio2.R  ejercicio3.R  ejercicio4.R  ejercicio5.R
r/part5/: dataset.csv  ejercicio1.R  ejercicio2.R  ejercicio3.R
(+5 files in other folders)
