[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = ""
authors = ["Daniel Ranchal <danielranchal@correo.ugr.es>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.1"
jupyterlab = "^3.2.4"
pandas = "^1.3.4"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
